# RIDOHcoding

./: IRCohens.py  MuskaanSurvey7.csv  README.md  SummaryStats.py  Survey7Katie.csv  SurveyQualitativeExcel.xlsx  combined_q1_kremove.csv  combined_q1_mremove.csv  combined_q2_kremove.csv  combined_q2_mremove.csv  combined_q3_kremove.csv  combined_q3_mremove.csv  joined.csv  katiedf.csv  muskaandf.csv  pyproject.toml  q1_katie.csv  q1_muskaan.csv  q2_katie.csv  q2_muskaan.csv  q3_katie.csv  q3_muskaan.csv  survey-text-analysis.ipynb
counts/: combined_q1_kremove.csv  combined_q2_kremove.csv  combined_q3_kremove.csv  counts.xls  q1_katie.csv  q2_katie.csv  q2_muskaan.csv
data/: Survey7Katie.csv  survey-data-1.csv  survey-data-2.csv  tsne-embedding-isolation.npy  tsne-embedding-scientists.npy
