[tool.poetry]
name = "ridohcoding"
version = "0.1.0"
description = ""
authors = ["TzuHwan Seet <tzuhwan_seet@brown.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
spacy = "^3.2.4"
sklearn = "^0.0"
nltk = "^3.7"
contextualSpellCheck = "^0.4.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
